--- a/udagram-deployment-project/k8s/aws-secret.yaml
+++ b/udagram-deployment-project/k8s/aws-secret.yaml
@@ -4,4 +4,5 @@ metadata:
   name: aws-secret
 type: Opaque
 data:
-  credentials: ___INSERT_AWS_CREDENTIALS_FILE__BASE64____ 
+  aws_access_key_id: AKIAYE4T3IFURTINRTE4
+  aws_secret_access_key: 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 
