--- a/udagram-deployment-project/docker/docker-compose-build.yaml
+++ b/udagram-deployment-project/docker/docker-compose-build.yaml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   reverseproxy:
-      image: reverseproxy
+      image: estherryu33/microservice-project:reverseproxy
       ports:
           - 8080:8080
       restart: always
