--- a/udagram-deployment-project/docker/docker-compose.yaml
+++ b/udagram-deployment-project/docker/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   reverseproxy:
-      image: reverseproxy
+      image: estherryu33/microservice-project:reverseproxy
       ports:
           - 8080:8080
       restart: always
@@ -9,7 +9,7 @@ services:
         - backend-user
         - backend-feed
   backend-user:
-    image: udagram-backend-user
+    image: estherryu33/microservice-project:udagram-backend-user
     environment:
       POSTGRES_USERNAME: $POSTGRES_USERNAME
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD 
@@ -21,7 +21,7 @@ services:
       JWT_SECRET: $JWT_SECRET
       URL: "http://localhost:8100"
   backend-feed:
-    image: udagram-backend-feed
+    image: estherryu33/microservice-project:udagram-backend-feed
     volumes:
       - $HOME/.aws:/root/.aws
     environment:
@@ -35,6 +35,6 @@ services:
       JWT_SECRET: $JWT_SECRET
       URL: "http://localhost:8100"
   frontend:
-    image: udagram-frontend:local
+    image: estherryu33/microservice-project:udagram-frontend
     ports:
       - "8100:80"
