--- a/udagram-deployment-project/docker/docker-compose-build.yaml
+++ b/udagram-deployment-project/docker/docker-compose-build.yaml
@@ -1,40 +1,18 @@
 version: "3"
 services:
   reverseproxy:
-      image: estherryu33/microservice-project:reverseproxy
-      ports:
-          - 8080:8080
-      restart: always
-      depends_on:
-        - backend-user
-        - backend-feed
-  backend-user:
-    image: estherryu33/microservice-project:udagram-backend-user
-    environment:
-      POSTGRES_USERNAME: $POSTGRES_USERNAME
-      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
-      POSTGRES_DB: $POSTGRES_DB
-      POSTGRES_HOST: $POSTGRES_HOST
-      AWS_REGION: $AWS_REGION
-      AWS_PROFILE: $AWS_PROFILE
-      AWS_BUCKET: $AWS_BUCKET
-      JWT_SECRET: $JWT_SECRET
-      URL: $URL
-  backend-feed:
+    build:
+      context: .
+    image: estherryu33/microservice-project:reverseproxy
+  backend_user:
+    build:
+      context: ../../udagram-backend-user
+    image: mercicle/microservice-project:udagram-backend-user
+  backend_feed:
+    build:
+      context: ../../udagram-backend-feed
     image: estherryu33/microservice-project:udagram-backend-feed
-    volumes:
-      - $HOME/.aws:/root/.aws
-    environment:
-      POSTGRES_USERNAME: $POSTGRES_USERNAME
-      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
-      POSTGRES_DB: $POSTGRES_DB
-      POSTGRES_HOST: $POSTGRES_HOST
-      AWS_REGION: $AWS_REGION
-      AWS_PROFILE: $AWS_PROFILE
-      AWS_BUCKET: $AWS_BUCKET
-      JWT_SECRET: $JWT_SECRET
-      URL: $URL
   frontend:
+    build:
+      context: ../../frontend
     image: estherryu33/microservice-project:udagram-frontend
-    ports:
-      - "8100:80"
