--- a/udagram-deployment-project/docker/docker-compose.yaml
+++ b/udagram-deployment-project/docker/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   reverseproxy:
-      image: estherryu33/microservice-project:reverseproxy
+      image: reverseproxy
       ports:
           - 8080:8080
       restart: always
@@ -12,28 +12,28 @@ services:
     image: estherryu33/microservice-project:udagram-backend-user
     environment:
       POSTGRES_USERNAME: $POSTGRES_USERNAME
-      POSTGRES_PASSWORD: $POSTGRES_PASSWORD 
-      POSTGRES_DB: $POSTGRES_DB 
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_DB: $POSTGRES_DB
       POSTGRES_HOST: $POSTGRES_HOST
-      AWS_REGION: $AWS_REGION 
-      AWS_PROFILE: $AWS_PROFILE 
+      AWS_REGION: $AWS_REGION
+      AWS_PROFILE: $AWS_PROFILE
       AWS_BUCKET: $AWS_BUCKET
       JWT_SECRET: $JWT_SECRET
-      URL: "http://localhost:8100"
+      URL: $URL
   backend-feed:
     image: estherryu33/microservice-project:udagram-backend-feed
     volumes:
       - $HOME/.aws:/root/.aws
     environment:
       POSTGRES_USERNAME: $POSTGRES_USERNAME
-      POSTGRES_PASSWORD: $POSTGRES_PASSWORD 
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
       POSTGRES_DB: $POSTGRES_DB
       POSTGRES_HOST: $POSTGRES_HOST
       AWS_REGION: $AWS_REGION
-      AWS_PROFILE: $AWS_PROFILE 
+      AWS_PROFILE: $AWS_PROFILE
       AWS_BUCKET: $AWS_BUCKET
       JWT_SECRET: $JWT_SECRET
-      URL: "http://localhost:8100"
+      URL: $URL
   frontend:
     image: estherryu33/microservice-project:udagram-frontend
     ports:
