--- a/udagram-deployment-project/k8s/env-secret.yaml
+++ b/udagram-deployment-project/k8s/env-secret.yaml
@@ -3,6 +3,6 @@ kind: Secret
 metadata:
   name: env-secret
 type: Opaque
-data:
+stringData:
   POSTGRES_USERNAME: udagramryuapi
   POSTGRES_PASSWORD: udagramryuapi
